# llm-basic-training

./: .gitignore  README.md  pyproject.toml
cse234/: example.py
cse234/pa1/: auto_diff.py  fused_ops.py  part3.txt  transformer.py
cse234/pa2/: discussion2-1.txt  matmul_triton.ipynb
cse234/pa2/data/: data_parallel_preprocess.py
cse234/pa2/model/: func_impl.py
cse234/pa2/mpi_wrapper/: comm.py
cse234/pa3/part1/: benchmark.py  moe.py
cuda_examples/: CMakeLists.txt  test.cu
cuda_examples/include/: cuda_check.cuh  vector_add.cuh
cuda_examples/vector_add/: CMakeLists.txt  vector_add_f32.cu
src/: position_encoding.py
tests/: test_attention.py  test_rope.py
tinyllm/: pyproject.toml
tinyllm/src/: attention.py  basics.py  embedding.py  layer_norm.py  position_encoding.py  qwen2.py
tinyllm/tests/: test_gqa.py  test_rope.py  tinyllm_base.py  utils.py
