[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[project]
name = "tiny-llm"
version = "0.1.0"
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.6.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
    "numpy>=2.2.4",
]


# 将仅用于开发的依赖项分组
[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.5", "pytest-benchmark>=5.1.0", "ruff>=0.11.6"]

# 简化脚本，只保留当前项目可用的命令
[tool.pdm.scripts]
test = "pytest"
format = "ruff format src tests"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."
